@@ -5,6 +5,7 @@ version <next>:
 - CrystalHD decoder moved to new decode API
 - add internal ebur128 library, remove external libebur128 dependency
 - Pro-MPEG CoP #3-R2 FEC protocol
+- premultiply video filter
 
 version 3.2:
 - libopenmpt demuxer
